vehicle/tests/golden/error/dataset/mismatchedType/mismatchedType.vcl
-- Test passes dataset of type List Rat
@dataset
trainingDataset : List Int
